tui/src/views/snapshots/toon_console_tui__views__workloads__tests__snapshot_expired.snap
---
source: src/views/workloads.rs
expression: render(&state)
---
┌ Workloads────────────────────────────────────────────────────────┐┌ Detail ────────────────────────────────────────────────────────────────────────┐
│  ID            LISTING    STATUS         RUNWAY      SB   GW     ││b2e292ee009eb3fc064aaa7a1bc70a28adc1039f495751d4caa0cb9c08fd8abd                │
│> b2e292ee009e… basic v1   expired 2h ⌛    unknown          ✓     ││Listing basic v1  Provider g.toon.provider                                      │
│                                                                  ││Expired 2 h 0 min ago: the paid time ran out with nothing extending it, and the │
│                                                                  ││provider has removed it. Auto-extend (a) or extend (e) before the paid time runs│
│                                                                  ││out to keep one alive; spawning again is the only way to get this one back.     │
│                                                                  ││                                                                                │
│                                                                  ││Runway This lease has ended, so it has no runway.                               │
│                                                                  ││                                                                                │
│                                                                  ││Leases (primary first)                                                          │
│                                                                  ││  standalone running          basic v1  running now                             │
│                                                                  ││                                                                                │
│                                                                  ││Access                                                                          │
│                                                                  ││  Host 203.0.113.7                                                              │
│                                                                  ││  SSH  ssh -p 40000 tenant@203.0.113.7                                          │
│                                                                  ││                                                                                │
│                                                                  ││Most recent takeover                                                            │
│                                                                  ││  No Takeover has happened for this workload.                                   │
│                                                                  ││                                                                                │
│                                                                  ││Auto-extend                                                                     │
│                                                                  ││  No budget set. Press `a` to set one.                                          │
│                                                                  ││                                                                                │
│                                                                  ││Gateway                                                                         │
│                                                                  ││  wlrjf3qat2z7ybskvj5bxrykfcw4ca47jflvdvgkudfzych5rk6q.gw.devnet.toonprotocol.de│
│                                                                  ││v — reading…                                                                    │
│                                                                  ││                                                                                │
│                                                                  ││Continuation Token                                                              │
│                                                                  ││  Reading…                                                                      │
│                                                                  ││                                                                                │
└──────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────┘
